source/slurm-2068531.out
List of compilers and libraries:
/opt/intel/oneapi/mkl/2023.0.0
/opt/intel/oneapi/mpi/2021.8.0/bin/mpiicc
/opt/intel/oneapi/mpi/2021.8.0/bin/mpiifort
out_LPQ.c(130): error: "dataLPQ" has already been declared in the current scope
    Struct_LPQ dataLPQ[] = {
               ^

out_LPQ.c(168): error: identifier "dataSize" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
    ^

out_LPQ.c(168): error: identifier "data" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
                      ^

out_LPQ.c(170): warning #266: function "set_LPQ" declared implicitly
    set_LPQ(dataLPQ, size_dataLPQ);
    ^

out_LPQ.c(654): error: expected a "}"

out_LPQ.c(31): warning #2637: static function "calc_LPQ" treated as extern because it was referenced but not defined
  static void calc_LPQ(char fileLPQ[YOUSO10], int norder, int numLPQ, int myid);
              ^

compilation aborted for out_LPQ.c (code 2)
make: *** [makefile:140: out_LPQ.o] Error 2
out_LPQ.c(130): error: "dataLPQ" has already been declared in the current scope
    Struct_LPQ dataLPQ[] = {
               ^

out_LPQ.c(168): error: identifier "dataSize" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
    ^

out_LPQ.c(168): error: identifier "data" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
                      ^

out_LPQ.c(170): warning #266: function "set_LPQ" declared implicitly
    set_LPQ(dataLPQ, size_dataLPQ);
    ^

out_LPQ.c(654): error: expected a "}"

out_LPQ.c(31): warning #2637: static function "calc_LPQ" treated as extern because it was referenced but not defined
  static void calc_LPQ(char fileLPQ[YOUSO10], int norder, int numLPQ, int myid);
              ^

compilation aborted for out_LPQ.c (code 2)
make: *** [makefile:140: out_LPQ.o] Error 2
out_LPQ.c(130): error: "dataLPQ" has already been declared in the current scope
    Struct_LPQ dataLPQ[] = {
               ^

out_LPQ.c(168): error: identifier "dataSize" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
    ^

out_LPQ.c(168): error: identifier "data" is undefined
    dataSize = sizeof(data) / sizeof(data[0]);
                      ^

out_LPQ.c(170): warning #266: function "set_LPQ" declared implicitly
    set_LPQ(dataLPQ, size_dataLPQ);
    ^

out_LPQ.c(654): error: expected a "}"

out_LPQ.c(31): warning #2637: static function "calc_LPQ" treated as extern because it was referenced but not defined
  static void calc_LPQ(char fileLPQ[YOUSO10], int norder, int numLPQ, int myid);
              ^

compilation aborted for out_LPQ.c (code 2)
make: *** [makefile:140: out_LPQ.o] Error 2
